Update 'uhkknv452-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:269a8e22583ff03852f149a4985d2636f226a98e@sha256:8ba293558433c9f9e6cce74ed2d047938a06bdb36e72cd2eeaab4d70133390f8

--- a/components/uhkknv452-go/overlays/development/deployment-patch.yaml
+++ b/components/uhkknv452-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: uhkknv452-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:269a8e22583ff03852f149a4985d2636f226a98e@sha256:8ba293558433c9f9e6cce74ed2d047938a06bdb36e72cd2eeaab4d70133390f8
+          name: container-image
